<resources>
    <string name="app_name">ticketSales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorts">Короче</string>
    <string name="subscribes">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="search_header">Поиск дешевых\nавиабилетов</string>
    <string name="from_hint">Откуда - Москва</string>
    <string name="search">Поиск</string>
    <string name="to_hint">Куда - Турция</string>
    <string name="music_fly">Музыкально отлететь</string>
    <string name="price">от %1$d ₽</string>
    <string name="complex_route">Сложный\nмаршрут</string>
    <string name="everywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_sale">Горячие\nбилеты</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_direction">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="back_date">обратно</string>
    <string name="filters">фильтры</string>
    <string name="people_class">%1$d,%2$s</string>
    <string name="ticket_price">%1$s ₽</string>
    <string name="ticket_time">%1$s - %2$s</string>
    <string name="from_to">%1$s - %2$s</string>
    <string name="date_pass">%1$s, %2$s пассажир</string>
    <string name="time_in_road">%1$s в пути %2$s</string>
    <string name="straight_flight">Прямые рейсы</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="back">back</string>
    <string name="price_graph">График цен</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="choose_date_from">Выберите дату отправления</string>
    <string name="choose_date_to">Выберите дату возвращения</string>
    <string name="no_transfer">/Без пересадок</string>
    <string name="price_subscribe">Подписка на цену</string>

</resources>