<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:background="?attr/background"
    tools:context=".screens.tickets.TicketFeedFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_ticket_container"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/grey2"
        android:paddingVertical="@dimen/spacing_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/tv_destinations"
            style="@style/Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8"
            android:text="@string/from_to"
            app:layout_constraintStart_toEndOf="@+id/arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Москва-Сочи" />

        <TextView
            android:id="@+id/tv_date_passengers"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/date_pass"
            android:textColor="@color/grey6"
            app:layout_constraintStart_toEndOf="@+id/arrow_back"
            app:layout_constraintTop_toBottomOf="@+id/tv_destinations"
            tools:text="23 февраля, 1 пассажир" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tickets"
        android:layout_marginBottom="@dimen/spacing_36"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_ticket_container"
        tools:listitem="@layout/card_ticket" />

    <Button
        android:id="@+id/btn_filter"
        style="@style/ButtonRoundedLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        app:icon="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_price_graph"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_price_graph"
        style="@style/ButtonRoundedRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_graph"
        app:icon="@drawable/ic_price_graphic"
        app:layout_constraintStart_toEndOf="@id/btn_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>