<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ticket_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/search_background_shape"
        android:backgroundTint="@color/grey3"
        android:paddingHorizontal="@dimen/spacing_16"
        android:paddingTop="@dimen/spacing_20"
        android:paddingBottom="@dimen/spacing_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_ticket_price"
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="6 990 ₽" />

        <ImageView
            android:id="@+id/iv_ticket_logo"
            android:layout_width="@dimen/spacing_24dp"
            android:layout_height="@dimen/spacing_24dp"
            android:contentDescription="@string/tickets"
            android:src="@drawable/icon_ticket_preview_shape"
            app:layout_constraintBottom_toBottomOf="@+id/tv_departure_airport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_ticket_time" />

        <TextView
            android:id="@+id/tv_ticket_time"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/ticket_time"
            app:layout_constraintStart_toEndOf="@+id/iv_ticket_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_price"
            tools:text="03:15 - 07:10" />

        <TextView
            android:id="@+id/tv_time_in_road"
            style="@style/Text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/time_in_road"
            app:layout_constraintStart_toEndOf="@+id/tv_ticket_time"
            app:layout_constraintTop_toTopOf="@+id/tv_ticket_time"
            tools:text="4ч в пути / Без пересадок" />

        <TextView
            android:id="@+id/tv_departure_airport"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey6"
            android:layout_marginTop="@dimen/spacing_4"
            app:layout_constraintStart_toStartOf="@+id/tv_ticket_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_time"
            tools:text="VKO" />

        <TextView
            android:id="@+id/tv_arrival_airport"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:textColor="@color/grey6"
            app:layout_constraintEnd_toEndOf="@+id/tv_ticket_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_time"
            tools:text="AER" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_badge"
        style="@style/Title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/badge_shape"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        app:layout_constraintBottom_toTopOf="@+id/ticket_container"
        app:layout_constraintStart_toStartOf="@id/ticket_container"
        app:layout_constraintTop_toTopOf="@+id/ticket_container"
        tools:text="Самый удобный" />




</androidx.constraintlayout.widget.ConstraintLayout>