<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:padding="@dimen/spacing_16"
    tools:context=".screens.tickets.MainFragment">


    <TextView
        android:id="@+id/tv_title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search_header"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_28dp"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_36"
        android:background="@drawable/search_background_shape"
        android:backgroundTint="@color/grey3"
        android:padding="@dimen/spacing_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_background_shape"
            android:paddingStart="@dimen/spacing_8"
            android:paddingEnd="@dimen/spacing_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/iv_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_16"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                app:tint="@color/grey6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="from_input_container,divider,to_input_container"
                app:layout_constraintStart_toEndOf="@id/iv_back_icon" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from_input_container"
                style="@style/SearchInputContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/from_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from_edit_text"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    style="@style/SearchInputEditText"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:dividerColor="@color/grey5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/from_input_container" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to_input_container"
                style="@style/SearchInputContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/to_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/from_input_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/to_edit_text"
                    style="@style/SearchInputEditText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_header_music_fly"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_fly"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/spacing_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_music_offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_music_fly"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_20"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/card_fly_to_music"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>